changing to JDK 8